# datalog-interpreter-cpp

./: .gitignore  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  Graph.cpp  Graph.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Test.cpp  Test.h  Token.cpp  Token.h  ast.cpp  ast.h  main.cpp  makefile  parser.cpp  parser.h
assets/: TemplateKeywordAutomaton.cpp.template  TemplateKeywordAutomaton.h.template  TemplateSingleCharAutomaton.cpp.template  TemplateSingleCharAutomaton.h.template  gen-automaton.rkt
assets/testfiles/: in1.txt  out1.txt  out2.txt  out3.txt
automaton/: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  EofAutomaton.cpp  EofAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IdAutomaton.cpp  IdAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionMarkAutomaton.cpp  QuestionMarkAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  all.h
database/: Database.h  Header.h  Relation.cpp  Relation.h  Tuple.h
